[bumpversion]
current_version = 0.8.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/abba_python/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[options]
package_dir = 
	=src
packages = find:

[options.packages.find]
where = src
install_requires = 
	numpy
	pandas
	pyimagej
	bg-atlasapi
python_requires = >=3.9, <=3.10
include_package_data = True
